--- a/.classpath
+++ b/.classpath
@@ -19,5 +19,6 @@
 	<classpathentry exported="true" kind="lib" path="lib/lwjgl-platform-2.9.2-natives-linux.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/lwjgl-platform-2.9.2-natives-osx.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/lwjgl-platform-2.9.2-natives-windows.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/commons-lang3-3.3.2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
