--- a/config.cfg
+++ b/config.cfg
@@ -1,8 +1,9 @@
 # display settings
-frame-witdh: 1440
-frame-hight: 900
+frame-witdh: 1366
+frame-hight: 768
 fullscreen: false
 
 # log settings
+java-debug: true
 debug: true
 errors: true
