--- a/config.cfg
+++ b/config.cfg
@@ -1,7 +1,7 @@
 # display settings
-frame-witdh: 1200
-frame-hight: 720
-fullscreen: false
+frame-witdh: 1920
+frame-hight: 1080
+fullscreen: true
 
 # log settings
 java-debug: true
