--- a/config.cfg
+++ b/config.cfg
@@ -1,7 +1,7 @@
 # display settings
-frame-witdh: 1920
-frame-hight: 1080
-fullscreen: true
+frame-witdh: 1366
+frame-hight: 768
+fullscreen: false
 
 # log settings
 java-debug: true
