--- a/.classpath
+++ b/.classpath
@@ -4,22 +4,13 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
 	<classpathentry exported="true" kind="lib" path="lib/gdx-1.5.4.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/gdx-backend-lwjgl-1.5.4.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gdx-freetype-1.5.4.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gdx-freetype-platform-1.5.4-natives-desktop.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/gdx-platform-1.5.4-natives-desktop.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/jinput-2.0.5.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/jinput-platform-2.0.5-natives-linux.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/jinput-platform-2.0.5-natives-osx.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/jinput-platform-2.0.5-natives-windows.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/jlayer-1.0.1-gdx.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/jorbis-0.0.17.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/jutils-1.0.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/lwjgl_util-2.9.2.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/lwjgl-2.9.2.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/lwjgl-platform-2.9.2-natives-linux.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/lwjgl-platform-2.9.2-natives-osx.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/lwjgl-platform-2.9.2-natives-windows.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/commons-lang3-3.3.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/sqlite-jdbc-3.8.7.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gdx-freetype-1.5.4.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gdx-freetype-platform-1.5.4-natives-desktop.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/lwjgl-2.9.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/lwjgl-platform-2.9.2-natives-windows.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/luaj-jse-3.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
