--- a/config.cfg
+++ b/config.cfg
@@ -8,3 +8,18 @@ java-debug: true
 debug: true
 errors: true
 lua-errors: true
+
+# key binds
+key-action-bar-1: 1
+key-action-bar-2: 2
+key-action-bar-3: 3
+key-action-bar-4: 4
+key-action-bar-5: 5
+key-action-bar-6: 6
+key-action-bar-7: 7
+key-action-bar-8: 8
+key-action-bar-9: 9
+key-action-bar-10: 0
+key-action-bar-11: -
+key-action-bar-12: =
+key-inventory: I
