--- a/RollGuy Engine/config.cfg
+++ b/RollGuy Engine/config.cfg
@@ -3,6 +3,10 @@ frame-witdh: 1366
 frame-hight: 768
 fullscreen: false
 
+#network settings
+server: leodigrigio.ddns.net
+port: 6666
+
 # log settings
 java-debug: true
 debug: true
