--- a/RollGuy Common/.classpath
+++ b/RollGuy Common/.classpath
@@ -4,5 +4,11 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry exported="true" kind="lib" path="lib/commons-lang3-3.3.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/luaj-jse-3.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/json-simple-1.1.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gdx-1.5.4.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gdx-backend-lwjgl-1.5.4.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gdx-freetype-1.5.4.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gdx-freetype-platform-1.5.4-natives-desktop.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gdx-platform-1.5.4-natives-desktop.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
